🔧 공통 가이드 작성

--- a/src/templates/inner-1240/inner-1240.html
+++ b/src/templates/inner-1240/inner-1240.html
@@ -1,18 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="preload"
-      as="font"
-      href="/public/fonts/Galmuri9.woff"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="/src/style.css" />
-    <link rel="stylesheet" href="/src/styles/main.css" />
-    <title>404 Not Found</title>
+    <link rel="stylesheet" href="./inner-1240.css" />
+    <title>inner-1240 템플릿</title>
   </head>
   <body>
     <div class="wrapper">
