--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,9 @@ body {
   width: 100%;
   max-width: 980px;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* 반응형 */
