--- a/src/pages/town/town.css
+++ b/src/pages/town/town.css
@@ -1,6 +1,7 @@
 /* ST : 마을 페이지 */
 .town {
   position: relative;
+  background-color: red;
   /* ST : 마을이미지 */
   .town-img {
     max-height: 100%;
@@ -8,33 +9,53 @@
   }
   /* ED : 마을이미지 */
 
-  .dictionary-icon {
+  .town-icon {
     position: absolute;
+    transform: translate(-50%, -50%);
+    animation: bouncebottom 2.25s infinite ease-in-out;
+  }
+  .dictionary-icon {
     width: 8%;
-    transform: translate(-50% -50%);
-    right: 28%;
-    bottom: 43%;
+    right: 22%;
+    bottom: 40%;
   }
   .gacha-icon {
-    position: absolute;
     width: 8%;
-    transform: translate(-50% -50%);
-    top: 18%;
-    left: 27%;
+    top: 22%;
+    left: 30%;
   }
   .slot-icon {
-    position: absolute;
     width: 8%;
-    transform: translate(-50% -50%);
-    right: 28%;
-    top: 18%;
+    right: 22%;
+    top: 22%;
   }
   .info-icon {
-    position: absolute;
     width: 8%;
-    transform: translate(-50% -50%);
-    left: 27%;
-    bottom: 43%;
+    left: 30%;
+    bottom: 40%;
+  }
+
+  .user-info-modal {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: #0000009d;
+  }
+  .d-none {
+    display: none;
+  }
+}
+@keyframes bouncebottom {
+  0%,
+  100% {
+    transform: translate(-50%, -50%) translateY(5%);
+  }
+  50% {
+    transform: translate(-50%, -50%) translateY(-5%);
   }
 }
 /* ED : 마을 페이지 */
