--- a/src/pages/start/start.css
+++ b/src/pages/start/start.css
@@ -1,6 +1,7 @@
 .start {
   padding: 15px;
   border: 15px double rgba(191, 0, 0, 70%);
+  background-color: #fff;
 
   .charactor-area {
     display: flex;
@@ -9,59 +10,21 @@
     height: 75%;
   }
   .charactor-area img {
-    width: 130px;
+    width: 14.5%;
   }
 
   .text-area {
     position: relative;
     height: 25%;
-    padding: 36px 25px;
-    border: 10px double var(--color-black);
-    border-radius: 20px;
+    padding: 4.6% 4.3%;
+    background: url('../../assets/start/text-box.png') no-repeat center;
+    background-size: 100% 100%;
   }
-
-  .text-area > span {
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    border: 1px solid var(--color-black);
-    border-radius: 50%;
-    background-color: var(--color-black);
-  }
-  .text-area > span:nth-of-type(1) {
-    top: -18px;
-    left: -18px;
-  }
-  .text-area > span:nth-of-type(2) {
-    top: -18px;
-    right: -18px;
-  }
-  .text-area > span:nth-of-type(3) {
-    bottom: -18px;
-    left: -18px;
-  }
-  .text-area > span:nth-of-type(4) {
-    bottom: -18px;
-    right: -18px;
-  }
-
-  .text-area > span::after {
-    content: '';
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    background-color: var(--color-white);
-    border-bottom-left-radius: 50% 100%;
-    border-bottom-right-radius: 50% 100%;
-  }
-
   .text-list {
-    font-size: 40px;
+    font-size: min(4.1vw, 4.1vh, 42px);
     line-height: 1.7;
   }
-  .text-list li:not(:nth-child(6)) {
+  .text-list li {
     display: none;
   }
 }
