--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 @import './styles/reset.css';
 @import './styles/font.css';
 
@@ -38,11 +37,9 @@ body {
 
 .inner-980 {
   margin: 0 auto;
-  aspect-ratio: 1/1;
+  height: min(980px, 100vw, 100vh);
   max-height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  aspect-ratio: 1/1;
 }
 
 /* 반응형 */
@@ -55,4 +52,3 @@ body {
     max-width: none;
   }
 }
-
