--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,9 @@
 .index {
-  padding: 80px 0;
+  padding-block: min(10%, 10vh);
+  position: relative;
   text-align: center;
+  background-color: #fff;
+  overflow: hidden;
 
   /* music-noti */
   .music-noti {
@@ -40,21 +43,27 @@
     color: var(--color-medium-gray);
   }
 
-  /* logo-area */
+  /* team-logo */
+  .team-logo {
+    width: 100%;
+  }
+
   .team-logo img {
     display: inline-block;
+    width: 50%;
   }
   .team-logo p {
     margin-top: 5px;
-    font-size: 34px;
+    font-size: min(2.4vh, 2.4vw);
     color: #a90621;
   }
 
   /* intro-slide */
   .introduce.intro-slide {
     position: relative;
-    margin: 45px auto 0;
-    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 5%;
     overflow: hidden;
   }
   .intro-slide .swiper-slide {
@@ -63,28 +72,31 @@
     align-items: center;
     gap: 20px;
   }
+  .intro-slide .swiper-slide img {
+    width: 25%;
+  }
   .intro-slide .swiper-slide h2 {
     color: var(--color-text-red);
-    font-size: 30px;
+    font-size: min(2.5vw, 2.5vh);
   }
   .intro-slide .swiper-slide h2 strong {
     display: block;
-    margin-top: -20px;
+    margin-top: -10%;
     color: var(--color-medium-gray);
   }
 
   .intro-slide .swiper-button-prev {
-    left: 0;
-    width: 38px;
-    height: 38px;
+    left: 10%;
+    width: 4%;
     background: url('/src/assets/index/prev_btn.png') no-repeat center;
+    background-size: contain;
   }
 
   .intro-slide .swiper-button-next {
-    right: 0;
-    width: 38px;
-    height: 38px;
+    right: 10%;
+    width: 4%;
     background: url('/src/assets/index/next_btn.png') no-repeat center;
+    background-size: contain;
   }
 
   .intro-slide .swiper-button-prev:after,
@@ -93,27 +105,29 @@
   }
 
   .start-btn {
-    margin-top: 45px;
+    margin-top: 5%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: 0 25px 4px 60px;
+    padding: 0 2% 4px 6%;
     border: 3px solid #000;
     border-radius: 8px;
-    font-size: 20px;
+    font-size: min(2vw, 2vh);
     color: #fff;
-    background: url('/src/assets/index/ico-start-btn.png') no-repeat left 18px
-      top 20px;
+    background: url('/src/assets/index/ico-start-btn.png') no-repeat left 6% top
+      60%;
+    background-size: 7.5%;
     background-color: #0066c5;
   }
 
   /* footer */
   footer {
-    margin-top: 34px;
+    margin-top: 3.5%;
   }
   footer small {
-    font-size: 9px;
-    color: #737373;
+    font-size: min(0.9vw, 0.9vh);
+    vertical-align: top;
+    color: var(--color-medium-gray);
   }
 }
 
