--- a/src/pages/town/town.css
+++ b/src/pages/town/town.css
@@ -37,31 +37,31 @@
 
   .user-info-modal {
     position: absolute;
-    display: block;
+    padding: 0 5%;
+    aspect-ratio: 38/20;
+    width: 43%;
     top: 72%;
     left: 13%;
-    width: 38%;
-    padding: 3% 4%;
-    aspect-ratio: 380/200;
     z-index: 1;
     background: url('../../assets/town/modalbg.png') no-repeat center/cover;
     border: none;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   .user-info-text {
-    font-size: min(1.9vw, 1.9vh);
+    font-size: min(1.8vw, 1.8vh);
     line-height: 1.5;
   }
   .modal-close-btn {
-    column-gap: 3px;
+    column-gap: 3%;
     display: flex;
     align-items: center;
-
-    font-weight: bold;
+    font-weight: 600;
+    font-size: min(2vw, 2vh);
     line-height: 1;
-    width: 60%;
-    margin-bottom: 3%;
+    width: 80%;
+    margin-bottom: 6%;
 
     img {
       width: 20%;
@@ -70,11 +70,27 @@
   .user-info-text {
     flex-shrink: 1;
   }
+  /* 뱃지 모음 li */
   .batges {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     flex-shrink: 1;
+    gap: 8%;
+    aspect-ratio: 1/1;
+    width: 46%;
+    /* 뱃지 낱개 li */
+    li {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        max-width: 100%;
+        aspect-ratio: 1/1;
+      }
+    }
   }
+  /* 모달창 onoff class */
   .d-none {
     display: none;
   }
