✨ start 페이지 로컬스트로지 분리, allowMusic 함수 제작

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -25,7 +25,7 @@
     font-size: min(4.4vw, 4.4vh);
     color: var(--color-text-red);
   }
-  .btn-area .press-start::before {
+  .btn-area .press-start.active::before {
     content: '';
     position: absolute;
     top: 50%;
