--- a/src/pages/dictionary/dictionary.css
+++ b/src/pages/dictionary/dictionary.css
@@ -35,6 +35,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-height: 0;
 }
 
 /* 도감 헤더 */
@@ -94,8 +95,10 @@ body {
   font-size: 20px;
 }
 
-/* 도감 내용 영역 */
+/* 도감 내용 영역  api*/
 .pokedex-content {
+  height: 100%;
+  min-height: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
@@ -105,6 +108,7 @@ body {
   flex: 1;
   border: 9px solid #000;
   border-radius: 4px;
+  height: 100%;
 }
 
 .pokemon-card {
@@ -144,7 +148,6 @@ body {
   font-size: 60px;
 }
 
-/*api*/
 
 /* 반응형 */
 @media (max-width: 640px) {
