--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ body {
 
 .wrapper {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
