--- a/src/pages/town/town.css
+++ b/src/pages/town/town.css
@@ -1,7 +1,30 @@
 /* ST : 마을 페이지 */
 .town {
   position: relative;
-  background-color: red;
+
+  /* ST: 뒤로가기, 음소거 버튼 */
+  .back-btn {
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    width: 6%;
+    height: 6%;
+    background: url('../../assets/common/back-btn.png') no-repeat center;
+    background-size: cover;
+    opacity: 0.7;
+  }
+  .toggle-sound {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+    width: 6%;
+    height: 6%;
+    background: url('../../assets/common/sound-on.png') no-repeat center;
+    background-size: cover;
+    opacity: 0.7;
+  }
+  /* ED: 뒤로가기, 음소거 버튼 */
+
   /* ST : 마을이미지 */
   .town-img {
     max-height: 100%;
