--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -4,6 +4,29 @@
   position: relative;
   /* ST : 슬롯 버튼 + 슬롯테두리이미지 + 슬롯 숫자 랩핑 */
 
+  /* ST: 뒤로가기, 음소거 버튼 */
+  .back-btn {
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    width: 6%;
+    height: 6%;
+    background: url('../../assets/common/back-btn.png') no-repeat center;
+    background-size: cover;
+    opacity: 0.7;
+  }
+  .toggle-sound {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+    width: 6%;
+    height: 6%;
+    background: url('../../assets/common/sound-on.png') no-repeat center;
+    background-size: cover;
+    opacity: 0.7;
+  }
+  /* ED: 뒤로가기, 음소거 버튼 */
+
   /* ST : 슬롯 버튼 */
   .slot-btn {
     position: absolute;
