--- a/src/pages/gacha/gacha.css
+++ b/src/pages/gacha/gacha.css
@@ -1,5 +1,27 @@
+.three-test {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  background: black;
+  display: none;
+
+  .pop-close{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    background: red;
+    z-index: 10000;
+  }
+
+}
 .gacha {
   position: relative;
+  overflow: hidden;
 
   .event-none {
     pointer-events: none;
@@ -8,6 +30,7 @@
   .gacha-base {
     width: 980px;
     height: 980px;
+    max-width: 100%;
     max-height: 100%;
     position: relative;
     margin: 0 auto;
@@ -32,6 +55,7 @@
     top: 0;
     max-height: 100%;
     translate: -50% 0%;
+    opacity: 0;
   }
   .monster-ball {
     position: absolute;
@@ -42,31 +66,46 @@
     z-index: 100;
   }
 
+  .help-text {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    white-space: nowrap;
+  }
+
   .claw-box {
-    width: 20%;
+    width: 30%;
     height: 100%;
     position: absolute;
     top: 15%;
     left: 50%;
     translate: -50% 0;
-    display: flex;
-    justify-content: center;
     transform-origin: center top;
+    overflow: hidden;
   }
 
   .claw-body-01 {
-    height: 10%;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 40%;
+    position: relative;
     z-index: 100;
+    margin: 0 auto;
   }
   .claw-line {
-    height: 55%;
+    width: 8%;
+    /* height: 45%; */
+    height: 5%;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  .claw-up-box {
+    width: 60%;
+    position: relative;
+    margin: 0 auto;
   }
   .claw {
-    height: 20%;
+    width: 100%;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -74,15 +113,25 @@
     z-index: 10;
   }
   .claw-open {
-    height: 20%;
+    width: 100%;
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-10px);
+    opacity: 0;
+  }
+  .claw-ball {
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(20px) scale(0.85);
+    opacity: 0;
+    z-index: 100;
   }
 
   @media (max-width: 640px) {
-    .gacha{
+    .gacha {
       position: relative;
     }
     .gacha-base {
@@ -98,11 +147,45 @@
       translate: 0;
     }
     .small-claw {
-      width: 20%; /* 원래 width 유지 */
       position: absolute;
       top: 15%; /* 원래 top 값 유지 또는 조정 */
-      translate: -50% 0;
       left: 50%;
+      translate: -50% 0;
+    }
+    .help-text {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1rem;
+      white-space: nowrap;
     }
   }
+}
+.joystick-left {
+  width: 10%;
+  height: 5%;
+  background: red;
+  position: absolute;
+  left: 10%;
+  bottom: 30%;
+  display: none;
+}
+.joystick-right {
+  width: 10%;
+  height: 5%;
+  background: green;
+  position: absolute;
+  left: 30%;
+  bottom: 30%;
+  display: none;
+}
+.a-button {
+  width: 10%;
+  height: 5%;
+  background: gold;
+  position: absolute;
+  right: 10%;
+  bottom: 30%;
+  display: none;
 }
