--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -115,7 +115,9 @@
     transform: translate(-50%, -50%);
     left: 50%;
   }
-
+  .p-none {
+    pointer-events: none;
+  }
   .star-back {
     top: 42%;
     aspect-ratio: 694/815;
