💄 start의 input 영역 수치 수정

--- a/src/pages/start/start.css
+++ b/src/pages/start/start.css
@@ -31,8 +31,8 @@
   .user-name {
     font-family: 'Galmuri9';
     width: 35%;
-    /* height: 4%; */
     font-size: 30px;
-    padding: 10px 10px;
+    font-size: min(3.4vw, 3.4vh);
+    padding: 0.8% 0.8%;
   }
 }
