--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -109,6 +109,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    perspective: 1000px;
   }
   .card-ab {
     position: absolute;
@@ -124,10 +125,47 @@
     width: 70%;
   }
   .poke-card {
-    top: 46%;
-    z-index: 9999;
+    top: 25%;
+    left: 35%;
     width: 30%;
-    border-radius: 8px;
+    z-index: 9999;
+    transform-origin: center center;
+    transform: scale(1);
+    border-radius: 5%;
+    /* transition: all 0.1s ease-in-out; */
+    box-shadow:
+      rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
+
+  /* .poke-card:hover {
+    scale: 1.5;
+  } */
+  /* 반짝이는 무지개 필터 */
+  .shine {
+    content: '';
+    transform-origin: center center;
+    transform: scale(1);
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    width: 30%;
+    aspect-ratio: 400/550;
+    z-index: 9999999999999;
+    border-radius: 5%;
+    background: linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0.05) 0%,
+      rgba(255, 0, 255, 0.05) 25%,
+      rgba(0, 255, 255, 0.05) 50%,
+      rgba(255, 255, 0, 0.05) 75%,
+      rgba(255, 255, 255, 0.05) 100%
+    );
+    background-size: 300% 300%;
+    mix-blend-mode: screen;
+    opacity: 0.3;
+    pointer-events: none;
+    transition: background-position 0.1s ease; /* 부드럽게 */
   }
 
   .poke-name {
