--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -109,7 +109,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    perspective: 1000px;
+    perspective: 500px;
   }
   .card-ab {
     position: absolute;
@@ -154,16 +154,63 @@
     z-index: 9999999999999;
     border-radius: 5%;
     background: linear-gradient(
-      120deg,
-      rgba(255, 255, 255, 0.05) 0%,
-      rgba(255, 0, 255, 0.05) 25%,
-      rgba(0, 255, 255, 0.05) 50%,
-      rgba(255, 255, 0, 0.05) 75%,
-      rgba(255, 255, 255, 0.05) 100%
+      135deg,
+      rgba(255, 255, 255, 0.5) 0%,
+      rgba(255, 0, 255, 0.4) 25%,
+      rgba(0, 255, 255, 0.4) 50%,
+      rgba(255, 255, 0, 0.4) 75%,
+      rgba(255, 255, 255, 0.5) 100%
     );
-    background-size: 300% 300%;
+    background-size: 150% 150%;
+    mix-blend-mode: overlay;
+    opacity: 0.4;
+    pointer-events: none;
+    transition: background-position 0.1s ease; /* 부드럽게 */
+  }
+  .shine2 {
+    content: '';
+    transform-origin: center center;
+    transform: scale(1);
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    width: 30%;
+    aspect-ratio: 400/550;
+    z-index: 9999999999999;
+    border-radius: 5%;
+    background: linear-gradient(
+      145deg,
+      transparent 50%,
+      rgba(255, 219, 112, 0.25) 55%,
+      rgba(132, 50, 255, 0.25) 60%,
+      transparent 65%
+    );
+    background-size: 200% 200%;
+    filter: brightness(1.5) opacity(0.8);
     mix-blend-mode: screen;
     opacity: 0.3;
+    pointer-events: none;
+    transition: background-position 0.1s ease; /* 부드럽게 */
+  }
+  .shadow {
+    content: '';
+    transform-origin: center center;
+    transform: scale(1);
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    width: 30%;
+    aspect-ratio: 400/550;
+    z-index: 999999999999999999;
+    border-radius: 5%;
+    background: radial-gradient(
+      circle at 50% 50%,
+      rgba(255, 255, 255, 0.3) 0%,
+      transparent 20%
+    );
+    background-size: 100% 100%;
+    mix-blend-mode: screen;
+    opacity: 0.8;
     pointer-events: none;
     transition: background-position 0.1s ease; /* 부드럽게 */
   }
