--- a/src/pages/slot/slot.css
+++ b/src/pages/slot/slot.css
@@ -128,6 +128,7 @@
     top: 25%;
     left: 35%;
     width: 30%;
+    aspect-ratio: 400/556;
     z-index: 9999;
     transform-origin: center center;
     transform: scale(1);
@@ -150,7 +151,7 @@
     top: 25%;
     left: 35%;
     width: 30%;
-    aspect-ratio: 400/550;
+    aspect-ratio: 400/556;
     z-index: 9999999999999;
     border-radius: 5%;
     background: linear-gradient(
@@ -163,7 +164,7 @@
     );
     background-size: 150% 150%;
     mix-blend-mode: overlay;
-    opacity: 0.4;
+    opacity: 0.5;
     pointer-events: none;
     transition: background-position 0.1s ease; /* 부드럽게 */
   }
@@ -175,7 +176,7 @@
     top: 25%;
     left: 35%;
     width: 30%;
-    aspect-ratio: 400/550;
+    aspect-ratio: 400/556;
     z-index: 9999999999999;
     border-radius: 5%;
     background: linear-gradient(
@@ -188,7 +189,7 @@
     background-size: 200% 200%;
     filter: brightness(1.5) opacity(0.8);
     mix-blend-mode: screen;
-    opacity: 0.3;
+    opacity: 0.5;
     pointer-events: none;
     transition: background-position 0.1s ease; /* 부드럽게 */
   }
@@ -200,7 +201,7 @@
     top: 25%;
     left: 35%;
     width: 30%;
-    aspect-ratio: 400/550;
+    aspect-ratio: 400/556;
     z-index: 999999999999999999;
     border-radius: 5%;
     background: radial-gradient(
@@ -251,6 +252,15 @@
 }
 @media screen and (max-width: 640px) {
   .a-button {
+    display: block;
+  }
+  .shine {
+    display: block;
+  }
+  .shine2 {
+    display: block;
+  }
+  .shadow {
     display: block;
   }
 }
