🚧 red 캐릭터 이동 기능 진행중

--- a/src/pages/town/town.css
+++ b/src/pages/town/town.css
@@ -9,6 +9,7 @@
     left: 50%;
     translate: -50% -50%;
     width: 45px;
+    width: min(45px, 4.4vw, 4.4vh);
     aspect-ratio: 1/1;
     background: url(../../assets/town/front.png) no-repeat center;
     background-size: cover;
